fix: alterando imagem de capa do site e removendo texto

--- a/index.html
+++ b/index.html
@@ -8,13 +8,8 @@
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-    <section class="hero">
-        <h1 class="typing">Site em Construção</h1>
-        <p class="hidden">Estamos trabalhando para trazer um novo site em breve.</p>
-    </section>
     <div class="image-container">
-        <img src="img/orire-site.jpg" alt="Imagem de construção">
+        <img src="img/capa-site-orire.jpg" alt="Imagem de construção">
     </div>
-    <script src="js/main.js"></script>
 </body>
 </html>
